--- a/report/main.tex
+++ b/report/main.tex
@@ -11,6 +11,10 @@
 \usepackage{indentfirst}
 \usepackage{subfiles}
 \usepackage{fancyvrb}
+\usepackage{soul}
+\usepackage{color}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{multicol}
 
 \graphicspath{{images/}{../images/}}
 
@@ -65,12 +69,6 @@ A77364 - Mafalda Nunes\\[1.3cm]
 \tableofcontents
 
 \newpage
-
-\hypersetup{
-	colorlinks=false,
-	allbordercolors={0 0 0},
-	pdfborderstyle={/S/U/W 1}
-}
 
 \section{Introdução}
 \subfile{sections/introducao}
