--- a/report/sections/requisitos.tex
+++ b/report/sections/requisitos.tex
@@ -26,7 +26,7 @@ leitor mDL, que são especificados nesta parte do ISO/IEC 18013, nomeadamente:
 		\begin{itemize}
 			\item DG1: elementos de texto (obrigatório).
 			\item DG2: detalhes do titular da licença (opcional).
-			\item DG3: detalhas da autoridade de emissora (opcional).
+			\item DG3: detalhes da autoridade de emissora (opcional).
 			\item DG4: imagem do retrato do titular da licença (opcional).
 			\item DG5: assinatura / imagem de marca habitual (opcional).
 			\item DG6: modelo biométrico facial (opcional).
@@ -40,26 +40,26 @@ leitor mDL, que são especificados nesta parte do ISO/IEC 18013, nomeadamente:
 		\item Elementos de dados adicionais:
 		\begin{itemize}
 			\item Inclusão obrigatória da imagem facial do titular.
-			\item Elementos de dados adicionais para "Up to Date info".
-			\item Identificador adicional que indica o fator de forma.
+			\item Elementos de dados adicionais para ``Up to Date info''.
+			\item \hl{Identificador adicional que indica o fator de forma.}
 			\item Grupos de dados mDL, utilizados para transferência de informação seletiva (inclui novos elementos de dados).
 		\end{itemize}
 	\end{itemize}
 
-	\item Protocolo de comunicação para troca de dados mDL entre uma mDL e um leitor:
+	\item Protocolo de comunicação para troca de dados mDL, entre uma mDL e um leitor:
 	\begin{itemize}
 		\item Camada de transmissão:
 		\begin{itemize}
-			\item ISO/IEC 14443 e/ou ISO/IEC 18092 (NFC)
-			\item Interface visual (câmara)
-			\item Wi-Fi \textit{Aware}
-			\item Internet
-			\item \textit{Bluetooth Low Energy} (BLE)
+			\item ISO/IEC 14443 e/ou ISO/IEC 18092 (NFC).
+			\item Interface visual (câmara).
+			\item Wi-Fi \textit{Aware}.
+			\item Internet.
+			\item \textit{Bluetooth Low Energy} (BLE).
 		\end{itemize}
 		\item Camada de apresentação:
 		\begin{itemize}
-			\item Comandos ISO/IEC 7816-4 e ISO/IEC 7816-8 (Parte 2 e 3 ) para o equivalente a \textit{Standard Encoding} para mDL
-			\item Códigos de barras 2D (para estabelecimento de conexão entre dispositivos e o equivalente a \textit{Compact Encoding} para mDL, na transferência de dados da mDL)
+			\item Comandos ISO/IEC 7816-4 e ISO/IEC 7816-8 (Parte 2 e 3) para o equivalente a \textit{Standard Encoding} para mDL.
+			\item Códigos de barras 2D (para estabelecimento de conexão entre dispositivos e o equivalente a \textit{Compact Encoding} para mDL, na transferência de dados da mDL).
 		\end{itemize}
 	\end{itemize}
 
