--- a/report/sections/mec_seguranca.tex
+++ b/report/sections/mec_seguranca.tex
@@ -196,12 +196,12 @@ completamente digital optou-se por não aborda-los.
 
 O acesso, por parte de um dispositivo de leitura, aos dados guardados numa
 mDL, apenas deve ser permitido depois do consentimento (implícito ou
-explícito) do mDL \emph{\hl{holder}}.
+explícito) do titular do mDL.
 
 Os métodos para o consentimento do utilizador não fazem parte dos temas
 abrangidos neste documento.
 
-Com o objetivo de proteger a privacidade do mDL \emph{holder}, aplicações do
+Com o objetivo de proteger a privacidade do titular do mDL, aplicações do
 governo não devem rastrear os movimentos de indivíduos através de \emph{geo
 tagging}.
 
