--- a/report/sections/implementacao.tex
+++ b/report/sections/implementacao.tex
@@ -1,2 +1,11 @@
 
 % Utilizando bibliotecas open-source, “construir” a mDL de acordo com o ISO (quer no aspeto de segurança como de estrutura de dados)
+
+\subsection{Parser ASN1}
+\subfile{sections/imp_parser.tex}
+
+\subsection{Grupos de dados (DG's)}
+\subfile{sections/imp_dgs.tex}
+
+\subsection{Aplicação mDL}
+\subfile{sections/imp_mdl.tex}
