--- a/report/sections/implementacao.tex
+++ b/report/sections/implementacao.tex
@@ -1,7 +1,7 @@
 
 % Utilizando bibliotecas open-source, “construir” a mDL de acordo com o ISO (quer no aspeto de segurança como de estrutura de dados)
 
-\subsection{Parser ASN1}
+\subsection{Parser ASN.1}
 \subfile{sections/imp_parser.tex}
 
 \subsection{Grupos de dados (DG's)}
