--- a/report/main.tex
+++ b/report/main.tex
@@ -16,6 +16,36 @@
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{multicol}
 
+% JSON
+\usepackage{listings}
+\usepackage{xcolor}
+
+\colorlet{punct}{red!60!black}
+\definecolor{background}{HTML}{EEEEEE}
+\definecolor{delim}{RGB}{20,105,176}
+\colorlet{numb}{magenta!60!black}
+
+\lstdefinelanguage{json}{
+    basicstyle=\normalfont\ttfamily,
+    showstringspaces=false,
+    breaklines=true,
+    frame=lines,
+    backgroundcolor=\color{background},
+    string=[s]{"}{"},
+    stringstyle=\color{numb},
+    comment=[l]{:},
+    commentstyle=\color{black},
+    %literate=
+    % *{0}{{{\color{numb}0}}}{1}
+    %  {:}{{{\color{punct}{:}}}}{1}
+    %  {,}{{{\color{punct}{,}}}}{1}
+    %  {\{}{{{\color{delim}{\{}}}}{1}
+    %  {\}}{{{\color{delim}{\}}}}}{1}
+    %  {[}{{{\color{delim}{[}}}}{1}
+    %  {]}{{{\color{delim}{]}}}}{1},
+}
+%
+
 \graphicspath{{images/}{../images/}}
 
 \renewcommand\appendixtocname{Anexos}
