--- a/report/sections/imp_mdl.tex
+++ b/report/sections/imp_mdl.tex
@@ -1,3 +1,5 @@
-- [ ] mDL [AFONSO]
-    - [ ] Funcionalidades (API)
-    - [ ] Exemplos de utilização
+% - [ ] mDL [AFONSO]
+%     - [ ] Funcionalidades (API)
+%     - [ ] Exemplos de utilização
+
+
