--- a/report/sections/imp_dgs.tex
+++ b/report/sections/imp_dgs.tex
@@ -1,4 +1,18 @@
-- [ ] DG's (1, 6, 10) + COM + GroupAccess + SOD [DANIEL]
-    - [ ] Variáveis de instância
-    - [ ] Funcionalidades (API)
-    - [ ] JSON específico
+% - [ ] DG's (1, 6, 10) + COM + GroupAccess + SOD [DANIEL]
+%     - [ ] Variáveis de instância
+%     - [ ] Funcionalidades (API)
+%     - [ ] JSON específico
+
+Para maximizar a modularidade do sistema, a implementação de cada um dos grupos de dados foi escrita na sua própria \textit{script} que é depois importada pelo \textit{mDL}. Estes partilham um conjunto de funcionalidades que permitem um acesso rápido e eficiente aos dados dos respetivos DG's. Entre estes, encontram-se:
+
+\begin{itemize}
+    \item Leitura e escrita de ficheiros nos quais é guardada informação dos grupos de dados codificada com ASN1.
+    \item Codificação de dados em ASN1.
+    \item Geração de um dicionário de dados com toda a informação de um dado grupo.
+    \item Geração de um valor de \textit{hash} sobre os valores de um dado grupo de dados.
+\end{itemize}
+
+Excecionalmente, o ficheiro \texttt{EF_GroupAccess} é responsável pelo estabelecimento e gestão de permissões de acesso dos grupos de dados. Por fim, o ficheiro \texttt{EF_SOD} é responsável por guardar a \textit{hash} coletiva do sistema, bem como armazenar os seus certificados e assinaturas digitais.
+
+Para facilitar o acesso aos dados, foi desenvolvido também uma estrutura JSON para cada um deles que delimita a ordem de entrada e tipo de cada um dos campos para o respetivo DG. Para cada campo, é definida a sua \textit{tag} (se relevante), o seu comprimento em \textit{bytes} e quaisquer limitações de \textit{input} a qual esteja sujeito.
+
